-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 8, 11, 17, 21, 24, 25
-
Component/s: hotspot
-
Environment:
Linux with GCC 15/glibc 2.42:
$ gcc --version
gcc (GCC) 15.0.1 20250410 (Red Hat 15.0.1-0)
Copyright (C) 2025 Free Software Foundation, Inc.
This is free software; see the source for copying conditions. There is NO
warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.- rpm -q glibc
glibc-2.41.9000-10.fc43.x86_64
Linux with GCC 15/glibc 2.42: $ gcc --version gcc (GCC) 15.0.1 20250410 (Red Hat 15.0.1-0) Copyright (C) 2025 Free Software Foundation, Inc. This is free software; see the source for copying conditions. There is NO warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. rpm -q glibc glibc-2.41.9000-10.fc43.x86_64 - rpm -q glibc
-
b23
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8358776 | 21.0.9 | Paul Hohensee | P3 | Resolved | Fixed | b01 |
| JDK-8359372 | 17.0.17 | Paul Hohensee | P3 | Resolved | Fixed | b01 |
| JDK-8368160 | 11.0.30 | Francesco Andreuzzi | P3 | Resolved | Fixed | b01 |
| JDK-8373153 | openjdk8u482 | Andrew Hughes | P3 | Resolved | Fixed | b05 |
| JDK-8377423 | shenandoah8u482 | Andrew Hughes | P3 | Resolved | Fixed | b05 |
++ /usr/bin/tee -a /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/build/newboot/hotspot/variant-server/libjvm/objs/precompiled/precompiled.hpp.gch.log
++ /usr/bin/tee -a /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/build/newboot/hotspot/variant-server/libjvm/objs/precompiled/precompiled.hpp.gch.log
In file included from /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/nmt/memTag.hpp:28,
from /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/memory/allocation.hpp:29,
from /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/classfile/classLoaderData.hpp:28,
from /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/precompiled/precompiled.hpp:34:
/builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/utilities/globalDefinitions.hpp:1166:28: error: ‘unsigned int uabs(int)’ was declared ‘extern’ and later ‘static’ [-fpermissive]
1166 | static inline unsigned int uabs(int n) { return uabs((unsigned int)n); }
| ^~~~
In file included from /usr/include/c++/15/cstdlib:83,
from /usr/include/c++/15/stdlib.h:36,
from /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/utilities/globalDefinitions_gcc.hpp:42,
from /builddir/build/BUILD/java-latest-openjdk-portable-24.0.1.0.9-build/java-24-openjdk-24.0.1.0.9-1.rolling.fc43.x86_64/jdk-24.0.1+9/src/hotspot/share/utilities/globalDefinitions.hpp:35:
/usr/include/stdlib.h:989:21: note: previous declaration of ‘unsigned int uabs(int)’
989 | extern unsigned int uabs (int __x) __THROW __attribute__ ((__const__)) __wur;
| ^~~~
+ exitcode=1
The reason for this seems to be a name clash of uabs() when stdlib.h is being included. GCC defines a version of it and so does HotSpot.
- backported by
-
JDK-8358776 Build failure with glibc 2.42 due to uabs() name collision
-
- Resolved
-
-
JDK-8359372 Build failure with glibc 2.42 due to uabs() name collision
-
- Resolved
-
-
JDK-8368160 Build failure with glibc 2.42 due to uabs() name collision
-
- Resolved
-
-
JDK-8373153 Build failure with glibc 2.42 due to uabs() name collision
-
- Resolved
-
-
JDK-8377423 Build failure with glibc 2.42 due to uabs() name collision
-
- Resolved
-
- caused by
-
JDK-8213419 C2 may hang in MulLNode::Ideal()/MulINode::Ideal() with gcc 8.2.1
-
- Resolved
-
- duplicates
-
JDK-8364663 HotSpot build error in glibc 2.42+r2
-
- Closed
-
- links to
-
Commit(master)
openjdk/jdk8u-dev/48a9edf6
-
Commit(master)
openjdk/jdk11u-dev/26a8acad
-
Commit(master)
openjdk/jdk17u-dev/42413131
-
Commit(master)
openjdk/jdk21u-dev/3445b99b
-
Commit(master)
openjdk/jdk/38bb8adf
-
Review(master)
openjdk/jdk8u-dev/711
-
Review(master)
openjdk/jdk11u-dev/3069
-
Review(master)
openjdk/jdk17u-dev/3628
-
Review(master)
openjdk/jdk21u-dev/1855
-
Review(master)
openjdk/jdk/24723