8354941: Build failure with GCC 15 due to uabs() name collision