src/hotspot/cpu/riscv/assembler_riscv.hpp
@@ -3817,7 +3817,7 @@ public:
   static const unsigned long branch_range = 1 * M;
 
   static bool reachable_from_branch_at(address branch, address target) {
-    return uabs(target - branch) < branch_range;
+    return UABS(target - branch) < branch_range;
   }
 
   // Decode the given instruction, checking if it's a 16-bit compressed
