src/hotspot/share/utilities/globalDefinitions.hpp
@@ -1142,9 +1142,13 @@ inline T clamp(T value, T min, T max) {
 inline bool is_odd (intx x) { return x & 1;      }
 inline bool is_even(intx x) { return !is_odd(x); }
 
+// Some compilers define uabs() in a conflicting way (e.g. GCC 15),
+// use a macro to work-around that name clash by calling it custom_uabs
+#define UABS(x) custom_uabs(x)
+
 // abs methods which cannot overflow and so are well-defined across
 // the entire domain of integer types.
-static inline unsigned int uabs(unsigned int n) {
+static inline unsigned int custom_uabs(unsigned int n) {
   union {
     unsigned int result;
     int value;
@@ -1153,7 +1157,7 @@ static inline unsigned int uabs(unsigned int n) {
   if (value < 0) result = 0-result;
   return result;
 }
-static inline julong uabs(julong n) {
+static inline julong custom_uabs(julong n) {
   union {
     julong result;
     jlong value;
@@ -1162,8 +1166,8 @@ static inline julong uabs(julong n) {
   if (value < 0) result = 0-result;
   return result;
 }
-static inline julong uabs(jlong n) { return uabs((julong)n); }
-static inline unsigned int uabs(int n) { return uabs((unsigned int)n); }
+static inline julong custom_uabs(jlong n) { return custom_uabs((julong)n); }
+static inline unsigned int custom_uabs(int n) { return custom_uabs((unsigned int)n); }
 
 // "to" should be greater than "from."
 inline size_t byte_size(void* from, void* to) {
